--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/hrnyc23-hammer/productsAPI#readme",
   "dependencies": {
+    "atob": "^2.1.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^7.12.0"
