--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "atob": "^2.1.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "forever": "^1.0.0",
     "pg": "^7.12.0"
   }
 }
