--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "atob": "^2.1.2",
     "body-parser": "^1.19.0",
+    "braces": "^3.0.2",
     "express": "^4.17.1",
     "forever": "^1.0.0",
     "pg": "^7.12.0"
