--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "braces": "^3.0.2",
     "express": "^4.17.1",
     "forever": "^1.0.0",
-    "pg": "^7.12.0"
+    "pg": "^7.12.0",
+    "redis": "^2.8.0"
   }
 }
